[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["hasezoey <hasezoey@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.75"
homepage = "https://github.com/hasezoey/adobe_key_extractor"
repository = "https://github.com/hasezoey/adobe_key_extractor"
