[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["hasezoey <hasezoey@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.75"
homepage = "https://github.com/hasezoey/adobe_key_extractor"
repository = "https://github.com/hasezoey/adobe_key_extractor"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
needless_return = "allow"
implicit_return = "deny"
needless_doctest_main = "allow"
tabs_in_doc_comments = "allow"
wildcard_imports = "warn"
semicolon_if_nothing_returned = "warn"
default_trait_access = "warn"
manual_assert = "warn"
map_unwrap_or = "warn"
ignored_unit_patterns = "warn"
manual_let_else = "warn"
single_match_else = "warn"
if_not_else = "warn"
manual_string_new = "warn"
used_underscore_binding = "warn"
return_self_not_must_use = "warn"
inefficient_to_string = "warn"
