[package]
name = "libade_extract_key"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4.16"
thiserror = "1.0"
regex = "1.5"
once_cell = "1.17"
byteorder = "1.4"
libaes = "0.6"
base64 = "0.21"

[lib]
name = "libade_extract_key"
path = "src/lib.rs"
