[package]
name = "libade_extract_key"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
thiserror = "2.0"
regex = "1.11"
# TODO: replace with std::Lazy once MSRV is 1.80
once_cell = "1.20"
byteorder = "1.5"
libaes = "0.7"
base64 = "0.22"

[lib]
name = "libade_extract_key"
path = "src/lib.rs"

[lints]
workspace = true
