[package]
name = "ade-extract-winapi-bin"
version = "0.1.0"
description = "winapi binary to call windows-exclusive functions"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories = []
keywords = []
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
winapi = { version = "0.3", features = ["dpapi", "impl-default"] }

[[bin]]
name = "ade-extract-winapi-bin"
path = "src/main.rs"
